# federatz

./: Cargo.toml  README.md  shell.nix
src/: main.rs  oauth.rs
src/db/: mod.rs
src/mastodon/: mod.rs
src/mastodon/accounts/: mod.rs
src/mastodon/oauth/: mod.rs
src/mastodon/timelines/: mod.rs
src/ui/widgets/: mod.rs
src/ui/widgets/main_window/: imp.rs  main-window  main-window.ui  mod.rs
src/ui/widgets/oauth/: mod.rs
src/ui/widgets/oauth/page1/: imp.rs  mod.rs  oauthAssistantPage1.cmb  oauthAssistantPage1.ui  page1.ui
src/ui/widgets/oauth/page2/: imp.rs  mod.rs  oauthAssistantPage2.cmb  oauthAssistantPage2.ui
src/ui/widgets/oauth/page3/: imp.rs  mod.rs  oauthAssistantPage3.cmb  oauthAssistantPage3.ui
src/ui/widgets/post/: imp.rs  mod.rs  post.ui
